--- a/pom.xml
+++ b/pom.xml
@@ -7,20 +7,25 @@
 
     <groupId>io.vanslog</groupId>
     <artifactId>spring-data-meilisearch</artifactId>
-    <version>0.3.1-SNAPSHOT</version>
+    <version>0.4.0</version>
 
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>3.2.0-SNAPSHOT</version>
+        <version>3.1.3</version>
     </parent>
 
     <name>Spring Data Meilisearch</name>
     <description>Spring Data Implementation for Meilisearch</description>
     <url>https://github.com/junghoon-vans/spring-data-meilisearch</url>
 
+    <organization>
+        <name>Junghoon Ban</name>
+        <url>https://github.com/junghoon-vans</url>
+    </organization>
+
     <properties>
-        <springdata.commons>3.2.0-SNAPSHOT</springdata.commons>
+        <springdata.commons>3.1.3</springdata.commons>
         <meilisearch-java>0.11.1</meilisearch-java>
 
         <java-module-name>spring.data.meilisearch</java-module-name>
