--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
@@ -1,8 +1,8 @@
 name: "Bug Report"
 description: Create a report to help us improve
-title: "[BUG]: "
 labels: [
-  "bug"
+  "status: waiting-for-triage",
+  "type: bug",
 ]
 body:
   - type: textarea
@@ -32,39 +32,3 @@ body:
         - Windows
     validations:
       required: true
-  - type: textarea
-    id: steps
-    attributes:
-      label: "Steps to Reproduce"
-      description: Steps to reproduce the behavior.
-      placeholder: |
-          1. Go to '...'
-          2. Click on '....'
-          3. Scroll down to '....'
-          4. See error
-    validations:
-      required: false
-  - type: textarea
-    id: expected
-    attributes:
-      label: "Expected Behavior"
-      description: A clear and concise description of what you expected to happen.
-      placeholder: Expected behavior
-    validations:
-      required: false
-  - type: textarea
-    id: actual
-    attributes:
-      label: "Actual Behavior"
-      description: A clear and concise description of what actually happened.
-      placeholder: Actual behavior
-    validations:
-      required: false
-  - type: textarea
-    id: additional
-    attributes:
-      label: "Additional Context"
-      description: Add any other context about the problem here.
-      placeholder: Additional context
-    validations:
-      required: false
