--- a/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
@@ -1,8 +1,8 @@
 name: "Feature Request"
 description: Suggest an idea for this project
-title: "[FEATURE]: "
 labels: [
-  "feature"
+  "status: waiting-for-triage",
+  "type: enhancement",
 ]
 body:
   - type: textarea
