--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -15,7 +15,7 @@ template: |
 
   $CHANGES
   
-  ❤️ Contributors
+  ## ❤️ Contributors
   We'd like to thank all the contributors who worked on this release!
   
   $CONTRIBUTORS
