Update release-drafter template.
Original Pull Request #91
Closes #90

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -10,11 +10,12 @@ categories:
 
 change-template: '* $TITLE #$NUMBER'
 template: |
+  ## 📗 Links
+  * [Spring Data Meilisearch Reference documentation](https://junghoon-vans.github.io/spring-data-meilisearch/)
 
   $CHANGES
   
-  ❤️ Contributors
-  
+  ## ❤️ Contributors
   We'd like to thank all the contributors who worked on this release!
   
   $CONTRIBUTORS
