--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>3.2.0-SNAPSHOT</version>
+        <version>3.3.0</version>
     </parent>
 
     <name>Spring Data Meilisearch</name>
@@ -25,7 +25,7 @@
     </organization>
 
     <properties>
-        <springdata.commons>3.2.0-SNAPSHOT</springdata.commons>
+        <springdata.commons>3.3.0</springdata.commons>
         <meilisearch-java>0.12.0</meilisearch-java>
         <testcontainers-meilisearch>1.0.5</testcontainers-meilisearch>
 
