--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>3.3.0-SNAPSHOT</version>
+        <version>3.3.13-SNAPSHOT</version>
     </parent>
 
     <name>Spring Data Meilisearch</name>
@@ -25,7 +25,7 @@
     </organization>
 
     <properties>
-        <springdata.commons>3.3.0-SNAPSHOT</springdata.commons>
+        <springdata.commons>3.3.13-SNAPSHOT</springdata.commons>
         <meilisearch-java>0.15.0</meilisearch-java>
         <testcontainers-meilisearch>1.0.5</testcontainers-meilisearch>
 
@@ -226,6 +226,30 @@
                         </plugin>
                     </plugins>
                 </pluginManagement>
+            </build>
+        </profile>
+
+        <profile>
+            <id>antora-process-resources</id>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/antora/resources/antora-resources</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+
+        <profile>
+            <id>antora</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.antora</groupId>
+                        <artifactId>antora-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
             </build>
         </profile>
     </profiles>
